--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-actuator": "^1.8.0",
     "morgan": "^1.10.0",
     "reflect-metadata": "^0.1.13",
+    "twitter-api-v2": "^1.6.5",
     "typedi": "^0.10.0",
     "typescript": "^4.5.2",
     "winston": "^3.3.3"
