--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -p tsconfig.json --downlevelIteration",
     "local": "nodemon dist/server.js -e js",
     "start": "tsc -p tsconfig.json --downlevelIteration && node dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-actuator": "^1.8.0",
+    "ioredis": "^4.28.2",
     "morgan": "^1.10.0",
+    "node-cache": "^5.1.2",
+    "redis": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "twitter-api-v2": "^1.6.5",
     "typedi": "^0.10.0",
@@ -29,8 +32,10 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-actuator": "^1.8.0",
+    "@types/ioredis": "^4.28.2",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.9",
+    "jest": "^27.4.3",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0"
   }
