--- a/package.json
+++ b/package.json
@@ -29,10 +29,14 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.16.4",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-typescript": "^7.16.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-actuator": "^1.8.0",
     "@types/ioredis": "^4.28.2",
+    "@types/jest": "^27.0.3",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.9",
     "jest": "^27.4.3",
